--- a/spring-eureka-common/src/main/resources/application.properties
+++ b/spring-eureka-common/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=common-service
 server.port=9200
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://spring-eureka-server:8761/eureka
