Add the pre-requisite network cmd comment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,7 @@ services:
     ports:
       - 8762:8762
 
+# As pre-requisite create a network : docker network create eureka
 networks:
   eureka:
     external:
